--- a/index.html
+++ b/index.html
@@ -96,13 +96,17 @@
         <input type="text" id="name" placeholder="Full Name" required />
         <input type="tel" id="phone" placeholder="Phone (WhatsApp preferred)" required />
         <input type="email" id="email" placeholder="Email Address (optional)" />
-        <select id="interest" required>
-          <option value="">What are you looking for?</option>
-          <option value="Life Insurance">Life Insurance</option>
-          <option value="Health / Critical Illness">Health / Critical Illness</option>
-          <option value="Travel Insurance">Travel Insurance</option>
-          <option value="Not Sure Yet">Not Sure Yet</option>
-        </select>
+         <select id="interest" required>
+  <option value="">What are you looking for?</option>
+  <option value="Life Insurance">Life Insurance</option>
+  <option value="Health / Critical Illness">Health / Critical Illness</option>
+  <option value="Travel Insurance">Travel Insurance</option>
+  <option value="Disability Insurance">Disability Insurance</option>
+  <option value="RRSP / Retirement Planning">RRSP / Retirement Planning</option>
+  <option value="TFSA / Tax-Free Savings">TFSA / Tax-Free Savings</option>
+  <option value="RESP / Education Planning">RESP / Education Planning</option>
+  <option value="Not Sure Yet">Not Sure Yet</option>
+</select>
         <button type="submit">➡️ Start My Free Check-up</button>
       </form>
       <p class="privacy-note">
